--- a/src/dajet-rabbitmq-http-api/dajet-rabbitmq-http-api.csproj
+++ b/src/dajet-rabbitmq-http-api/dajet-rabbitmq-http-api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>DaJet.RabbitMQ.HttpApi</AssemblyName>
     <RootNamespace>DaJet.RabbitMQ.HttpApi</RootNamespace>
     <Authors>Zhichkin</Authors>
@@ -9,10 +9,10 @@
     <Description>C# implementation of the RabbitMQ management HTTP API</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Zhichkin © 2021</Copyright>
-    <PackageReleaseNotes>Added IDisposable interface implementation</PackageReleaseNotes>
+    <PackageReleaseNotes>Updated to .NET 6.0</PackageReleaseNotes>
     <PackageProjectUrl>https://rawcdn.githack.com/rabbitmq/rabbitmq-server/v3.8.19/deps/rabbitmq_management/priv/www/api/index.html</PackageProjectUrl>
     <RepositoryUrl>https://github.com/zhichkin/dajet-rabbitmq-http-api</RepositoryUrl>
-    <Version>1.2.0</Version>
+    <Version>1.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
